<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="320dp"
        android:layout_height="180dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/image"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onCreate"
        android:text="@string/create_a_new_note"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/all"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onAll"
        android:text="@string/show_all_notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create" />


</androidx.constraintlayout.widget.ConstraintLayout>